--- a/HTML/Demo/index.html
+++ b/HTML/Demo/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content ="width=device-width, initial-scale=1">
+    <title>Document</title>
 </head>
 <body>
-$END$
+<div style="border: 2px solid black">
+    <span style="color: aquamarine"><h1 style="border: 2px solid red">Hello</h1>
+        <h2 style="border: 2px solid green">Hello</h2>
+        <h6 style="border: 2px solid blue">Hello</h6></span>
+</div>
+<p style="color: red;">This is a <span style="color: green; border: dotted 5px darkblue">paragraph</span>element</p>
 </body>
 </html>
