--- a/Labs/restaurant_site/index.html
+++ b/Labs/restaurant_site/index.html
@@ -4,13 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Time-Travel Café</title>
+    <script src="https://kit.fontawesome.com/f0a8c83f46.js" crossorigin="anonymous"></script>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<img src="images/TimeTravelCaféBanner.png" alt="Banner for restaurant that reads Time Travel Café">
-<h1>Time Travel Café</h1>
-<a href="index.html">Home</a>
-<a href="menu.html">Menu</a>
-<a href="hiring.html">Apply Now</a>
+<div class="blurred-background"></div>
+<div class="Logo">
+    <img src="images/TimeTravelCaféLogo.png" alt="Logo of Café" class="Logo">
+</div>
+<div class="navbar">
+    <ul class="nav nav-underline">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="menu.html">Menu</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="hiring.html">Apply Now</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true"></a>
+        </li>
+    </ul>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
