--- a/Labs/restaurant_site/index.html
+++ b/Labs/restaurant_site/index.html
@@ -4,31 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Time-Travel Café</title>
-    <script src="https://kit.fontawesome.com/f0a8c83f46.js" crossorigin="anonymous"></script>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <script src="https://kit.fontawesome.com/f0a8c83f46.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="blurred-background"></div>
-<div class="Logo">
-    <img src="images/TimeTravelCaféLogo.png" alt="Logo of Café" class="Logo">
-</div>
-<div class="navbar">
-    <ul class="nav nav-underline">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="menu.html">Menu</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="hiring.html">Apply Now</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true"></a>
-        </li>
-    </ul>
+<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="index.html" style="font-family: Tagesschrift, system-ui">CHRONOBITE</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html" id="home-button">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="menu.html" id="menu-button">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="hiring.html" id="hiring-button">Apply Now</a>
+                </li>
+            </ul>
+            <span class="navbar-text">
+
+      </span>
+        </div>
+    </div>
+</nav>
+<div class = "container text-center bg-body-tertiary" data-bs-theme="dark">
+    <div class="row gy-5">
+        <h1 class="welcome" id="welcome">Welcome To ChronoBite</h1>
+    </div>
+    <div class="row gy-8">
+        <h2 class="sub welcome" id="welcome2">Step Through the Tastes of Time</h2>
+    </div>
+    <div class="row align-items-end" style="justify-content: space-evenly; min-height: 400px">
+        <div class="col-lg-3 buttons" style="align-content: center; min-height: 200px">
+            <p class="p-0" style="font-family: 'Times New Roman', system-ui; font-size: 24px">Roman Times</p>
+            <i class="fa-solid fa-horse" style="font-size: 24px"></i>
+            <p class="p" style="font-family: 'Times New Roman', system-ui; font-size: medium">Flash back to Ancient Rome to immerse yourself in the sights and flavors of the past</p>
+        </div>
+        <div class="col-lg-3 buttons" style="align-content: center; min-height: 200px">
+                <p class="p-0" style="font-family: Papyrus, serif; font-size: 24px; margin-bottom: 0">Ancient Egypt</p>
+            <img src="images/pyramid.png" alt="pyramid" id="pyramid">
+            <p style="font-family: Papyrus, serif; font-size: medium">Taste the food eaten by the Pharaohs of Ancient Egypt</p>
+        </div>
+        <div class="col-lg-3 buttons" style="align-content: center; min-height: 200px">
+                <p class="p-0">The Future</p>
+            <img src="images/virtual-reality.png" alt="virtual reality">
+        </div>
+    </div>
+
+
+
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
