--- a/Labs/restaurant_site/hiring.html
+++ b/Labs/restaurant_site/hiring.html
@@ -4,93 +4,178 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Apply Now</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-<h1>Apply Now</h1>
-<a href="index.html">Home</a>
-<a href="menu.html">Menu</a>
-<a href="hiring.html">Apply Now</a>
-<form action="" method="get">
-    <label for="fname">First Name:</label>
-    <input type="text" name="fname" id="fname" placeholder="First Name" required minlength="1" maxlength="20">
-    <br>
-    <label for="lname">Last Name:</label>
-    <input type="text" name="lname" id ="lname" placeholder="Last Name" minlength="1" maxlength="20">
-    <br>
-    <label for="address1">Address</label>
-    <input type="text" name="address1" id="address1" placeholder="Primary Address" required>
-    <br>
-    <label for="city1">City</label>
-    <input type="text" name="city" id="city1" placeholder="City" required maxlength="29">
-    <label for="state1">States</label>
-    <select name="state" id="state1">
-        <option value="tx">TX</option>
-        <option value="tn">TN</option>
-        <option value="al">AL</option>
-    </select>
-    <br>
-    <label for="address2">Alternate Address</label>
-    <input type="text" name="address2" id="address2" placeholder="Primary Address">
-    <br>
-    <label for="city2">City</label>
-    <input type="text" name="city" id="city2" placeholder="City" maxlength="29">
-    <label for="state2">States</label>
-    <select name="state" id="state2">
-        <option value="tx">TX</option>
-        <option value="tn">TN</option>
-        <option value="al">AL</option>
-    </select>
-    <br>
-    <label for="age">Age</label>
-    <input type="number" name="age" id="age" required min="21" max="99">
-    <br>
-    <label for="phone">Phone</label>
-    <input type="tel" name="phone" id="phone" placeholder="(XXX) XXX-XXXX" pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}" required>
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" name="email" id="email" placeholder="Email">
-    <br>
-    <label for="password">Password</label>
-    <input type="text" name="password" id="password" required minlength="8" maxlength="12" pattern="((?=.*\d)(?=.*[A-Z])(?=.*[a-z])(?=.*\W)\w.{6,18}\w)">
-    <br>
-    <label for="IsMarried">Are you Married?</label>
-    <input type="radio" name="IsMarried" id="IsMarried" value="yes">Yes
-    <input type="radio" name="IsMarried" id="IsMarriedFalse" value="no" checked>No
-    <br>
-    <fieldset>
-        <legend>Choose your favorite colors</legend>
+<body id="hiring-page">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="index.html" style="font-family: Tagesschrift, system-ui"><img src="images/time-machine.png" alt="Time Machine"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html" id="home-button">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"  href="menu.html" id="menu-button">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="hiring.html" id="hiring-button">Apply Now</a>
+                </li>
+            </ul>
+            <span class="navbar-text">
 
-        <div>
-            <label for="blue">Blue</label>
-            <input type="checkbox" name="blue" id="blue">
+      </span>
         </div>
-        <div>
-            <label for="green">Green</label>
-            <input type="checkbox" name="green" id="green">
+    </div>
+</nav>
+<div class="container-sm" data-bs-theme="dark" id="application-container">
+    <form class="row g-3 bg-body-tertiary" data-bs-theme="dark" name="myForm" id="application-row1">
+        <div class="col-6">
+            <input type="text" class="form-control" placeholder="First name" id="fname" aria-label="First name">
         </div>
-        <div>
-            <label for="red">Red</label>
-            <input type="checkbox" name="red" id="red">
+        <div class="col-6">
+            <input type="text" class="form-control" placeholder="Last name" id="lname" aria-label="Last name">
         </div>
-        <div>
-            <label for="purple">Purple</label>
-            <input type="checkbox" name="purple" id="purple">
+        <div class="col-md-6">
+            <label for="inputEmail4" class="form-label" id="inputEmail-label">Email</label>
+            <input type="email" class="form-control" name="email" id="inputEmail4" aria-label="Email">
         </div>
-        <div>
-            <label for="yellow">Yellow</label>
-            <input type="checkbox" name="yellow" id="yellow">
+        <div class="col-md-2">
+            <label for="inputAge" class="form-label" id="inputAge-label">Age</label>
+            <input type="number" class="form-control" name="age" id="inputAge">
+            <div id="ageError" class="error" role="alert" aria-live="polite" style="display:none"></div>
         </div>
-    </fieldset>
-    <br>
-    <label for="moreInfo">Additional Information about yourself.</label>
-    <br>
-    <textarea name="moreInfo" id="moreInfo" cols="30" rows="4" maxlength="30"></textarea>
-    <br>
-    <button type="submit">Submit</button>
-    <button type="reset">Reset Form</button>
-</form>
-<a href="index.html">Home</a>
-<a href="menu.html">Menu</a>
-<a href="hiring.html">Apply Now</a>
+        <div class="col-md-4">
+            <label for="inputPhone" class="form-label" id="inputPhone-label">Phone</label>
+            <input type="tel" class="form-control" name="phone" id="inputPhone" placeholder="(000)-000-0000">
+            <div id="phoneError" class="error" role="alert" aria-live="polite" style="display:none"></div>
+            <div id="phoneOk" class="ok" style="display:none">Phone looks good and will be saved as <span id="phoneNormalized"></span></div>
+        </div>
+        <div class="col-12">
+            <label for="inputAddress" class="form-label" id="inputAddress-label">Address</label>
+            <input type="text" class="form-control" name="address1" id="inputAddress" placeholder="1234 Main St">
+        </div>
+        <div class="col-12">
+            <label for="inputAddress2" class="form-label" id="inputAddress2-label">Address 2</label>
+            <input type="text" class="form-control" name="address2" id="inputAddress2" placeholder="Apartment, studio, or floor">
+        </div>
+        <div class="col-md-6">
+            <label for="inputCity" class="form-label" id="inputCity-label">City</label>
+            <input type="text" class="form-control" name="city" id="inputCity">
+        </div>
+        <div class="col-md-4">
+            <label for="inputState" class="form-label" id="inputState-label">State</label>
+            <select id="inputState" class="form-select">
+                <option selected>Choose...</option>
+                <option>Texas</option>
+                <option>Tennessee</option>
+                <option>Alabama</option>
+            </select>
+        </div>
+        <div class="col-md-2">
+            <label for="inputZip" class="form-label" id="inputZip-label">Zip</label>
+            <input type="text" class="form-control" name="zip" id="inputZip">
+        </div>
+        <div class="col-md-12">
+            <label for="inputPassword4" class="form-label" id="inputPassword4-label">Password</label>
+            <input type="password" class="form-control" name="password" id="inputPassword4">
+        </div>
+        <div class="col-md-4">
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="radioDefault" id="inlineCheckbox1" value="single">
+                <label class="form-check-label" for="inlineCheckbox1" id="inlineCheckbox1-label">Single</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="radioDefault" id="inlineCheckbox2" value="married">
+                <label class="form-check-label" for="inlineCheckbox2" id="inlineCheckbox2-label">Married</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="radioDefault" id="inlineCheckbox3" value="complicated">
+                <label class="form-check-label" for="inlineCheckbox3" id="inlineCheckbox3-label">Complicated</label>
+            </div>
+        </div>
+        <div class="col-8" id="favoriteColor">
+            <label for="favoriteColor" id="favoriteColor-label">Choose your favorite colors: </label>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="checkbox1">
+                <label class="form-check-label" for="checkbox1">Blue</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="checkbox2">
+                <label class="form-check-label" for="checkbox2">Green</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="checkbox3">
+                <label class="form-check-label" for="checkbox3">Red</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="checkbox4">
+                <label class="form-check-label" for="checkbox4">Yellow</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="checkbox5">
+                <label class="form-check-label" for="checkbox5">Purple</label>
+            </div>
+        </div>
+        <div class="col-md-12">
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label" id="textarea-label">More Info</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" name="textarea" rows="4" maxlength="30" placeholder="Write any more information you would like to know"></textarea>
+            </div>
+        </div>
+        <div class="col-12">
+            <button type="submit" class="btn btn-primary" id="submit-btn">Submit</button>
+        </div>
+    </form>
+</div>
+
+<!--    <label for="IsMarried">Are you Married?</label>-->
+<!--    <input type="radio" name="IsMarried" id="IsMarried" value="yes">Yes-->
+<!--    <input type="radio" name="IsMarried" id="IsMarriedFalse" value="no" checked>No-->
+<!--    <br>-->
+<!--    <fieldset>-->
+<!--        <legend>Choose your favorite colors</legend>-->
+
+<!--        <div>-->
+<!--            <label for="blue">Blue</label>-->
+<!--            <input type="checkbox" name="blue" id="blue">-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <label for="green">Green</label>-->
+<!--            <input type="checkbox" name="green" id="green">-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <label for="red">Red</label>-->
+<!--            <input type="checkbox" name="red" id="red">-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <label for="purple">Purple</label>-->
+<!--            <input type="checkbox" name="purple" id="purple">-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <label for="yellow">Yellow</label>-->
+<!--            <input type="checkbox" name="yellow" id="yellow">-->
+<!--        </div>-->
+<!--    </fieldset>-->
+<!--    <br>-->
+<!--    <label for="moreInfo">Additional Information about yourself.</label>-->
+<!--    <br>-->
+<!--    <textarea name="moreInfo" id="moreInfo" cols="30" rows="4" maxlength="30"></textarea>-->
+<!--    <br>-->
+<!--    <button type="submit">Submit</button>-->
+<!--    <button type="reset">Reset Form</button>-->
+<!--</form>-->
+<!--<a href="index.html">Home</a>-->
+<!--<a href="menu.html">Menu</a>-->
+<!--<a href="hiring.html">Apply Now</a>-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 </body>
 </html>
