--- a/Labs/restaurant_site/index.html
+++ b/Labs/restaurant_site/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Tagesschrift&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -53,11 +53,12 @@
         <div class="col-lg-3 buttons" style="align-content: center; min-height: 200px">
                 <p class="p-0" style="font-family: Papyrus, serif; font-size: 24px; margin-bottom: 0">Ancient Egypt</p>
             <img src="images/pyramid.png" alt="pyramid" id="pyramid">
-            <p style="font-family: Papyrus, serif; font-size: medium">Taste the food eaten by the Pharaohs of Ancient Egypt</p>
+            <p class="egypt-description">Taste the food eaten by the Pharaohs of Ancient Egypt</p>
         </div>
         <div class="col-lg-3 buttons" style="align-content: center; min-height: 200px">
-                <p class="p-0">The Future</p>
+                <p class="p-0" id="future">The Future</p>
             <img src="images/virtual-reality.png" alt="virtual reality">
+            <p class="future-description">Jump into the future and taste the advanced flavors of a new age</p>
         </div>
     </div>
 
