--- a/Labs/restaurant_site/hiring.html
+++ b/Labs/restaurant_site/hiring.html
@@ -127,7 +127,8 @@
         <div class="col-md-12">
             <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label" id="textarea-label">More Info</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" name="textarea" rows="4" maxlength="30" placeholder="Write any more information you would like to know"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" name="textarea" rows="4" placeholder="Write any more information you would like to know"></textarea>
+                <div class="form-text text-muted" id="maxCharCount"></div>
             </div>
         </div>
         <div class="col-1">
