--- a/Labs/restaurant_site_react/index.html
+++ b/Labs/restaurant_site_react/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>restaurant_site_react</title>
-  </head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Time-Travel Café</title>
+      <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+      <script src="https://kit.fontawesome.com/f0a8c83f46.js" crossorigin="anonymous"></script>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Tagesschrift&display=swap" rel="stylesheet"> </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
